minor tweaks to tests